Add AssignmentHistory to request objects
