# management/serializer.py
@@ -2,7 +2,7 @@ from rest_framework import fields, serializers
 from rest_framework.serializers import ModelSerializer
 
 from authentication.serializer import UserSerializer
-from crisis.models import Request
+from crisis.models import Request, RequestAssignment
 
 from management.models import Ability
 
@@ -13,9 +13,22 @@ class AbilitySerializer(ModelSerializer):
         fields = "__all__"
 
 
+class RequestAssignmentSerializer(ModelSerializer):
+    class Meta:
+        model = RequestAssignment
+        fields = ("status", "id", "assigned_at", "did_complete")
+
+
 class RequestSerializer(ModelSerializer):
     assignee = UserSerializer(
         source="assignee.user", allow_null=True, required=False, read_only=True
+    )
+    assignmentHistory = RequestAssignmentSerializer(
+        source="request_assignee",
+        allow_null=True,
+        required=False,
+        read_only=True,
+        many=True,
     )
     status = fields.CharField(required=False, allow_null=True)
 
@@ -47,4 +60,12 @@ class RequestSerializer(ModelSerializer):
 
     class Meta:
         model = Request
-        fields = ("id", "type", "deadline", "description", "assignee", "status")
+        fields = (
+            "id",
+            "type",
+            "deadline",
+            "description",
+            "assignee",
+            "status",
+            "assignmentHistory",
+        )
